--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to My Bank Accounts related Local APIs in Production environment"
+  message: "Welcome to My Bank Loans related Local APIs in Production environment"
   contactDetails:
     name: "Piyush Kumar-  Product owner"
     email: "bWJp9@example.com"
