--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to My Bank Cards related Local APIs in Production environment"
+  message: "Welcome to My Bank Cards related Local APIs in Prod environment"
   contactDetails:
     name: "Piyush Kumar-  Product owner"
     email: "bWJp9@example.com"
