--- a/accounts.yml
+++ b/accounts.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to My Bank Accounts related Local APIs in Dev"
+  message: "Welcome to My Bank Accounts related Docker APIs in Dev"
   contactDetails:
     name: "Piyush Kumar-Developer"
     email: "bWJp9@example.com"
